Update lab1 with error handling

--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -4,6 +4,9 @@ CFLAGS = -Wall
 default:
 	$(CC) $(CFLAGS) main.c -o main.o
 
+gen:
+	-head -c 12345678 < /dev/urandom > rand.bin
+
 clean:
 	-rm -f *.o
 	-rm -f *.bin
