Include header files in makefile

--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -5,7 +5,7 @@ CFLAGS = -Wall
 default: udps.o udpc.o
 
 %.o: %.c $(DEPS)
-	$(CC) $(CFLAGS) -c -o $@ $<
+	$(CC) $(CFLAGS) $^ -o $@
 
 clean:
 	-rm -f *.o
